# fastapi_prototype

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  README.rst  alembic.ini  beautify.sh  docker-compose-tests.yml  local_prepare.sh  local_run.sh  pyproject.toml
.github/workflows/: tests.yml
.launch/: Dockerfile_base
.launch/api/: Dockerfile
.launch/celery/: Dockerfile
.launch/consume/: Dockerfile
.launch/grpc/: Dockerfile
.launch/tests/: .test_env
.launch/tests/api/: Dockerfile
docs/source/: base_commands.rst  conf.py  db_structure.rst  ddd_concepts.rst  env_variables.rst  index.rst
src/app/: consume.py  gunicorn_config.py  main.py
src/app/api/core/schemas/: req_schemas.py  resp_schemas.py
src/app/api/v1/: dependencies.py  routers.py
src/app/application/: container.py
src/app/application/common/dto/: base.py
src/app/application/common/services/: base.py
src/app/application/dto/: __init__.py  auth.py  user.py
src/app/application/services/: auth_service.py  common_service.py  users_service.py
src/app/config/: celery.py  settings.py
src/app/core/models/: container.py  mixins.py  users.py
src/app/core/repositories/: base.py  container.py  users_repository.py
src/app/core/tasks/: example_task.py
src/app/core/utils/: common.py
src/app/domain/auth/: container.py
src/app/domain/auth/services/: auth_service.py  jwt_service.py
src/app/domain/auth/value_objects/: __init__.py  jwt_vob.py
src/app/domain/common/: container.py  exceptions.py
src/app/domain/common/aggregates/: base.py
src/app/domain/common/entities/: base.py
src/app/domain/common/events/: base.py
src/app/domain/common/services/: base.py
src/app/domain/common/utils/: common.py
src/app/domain/core/aggregates/: base.py
src/app/domain/core/services/: base.py
src/app/domain/entities/: users.py
src/app/domain/repositories/: base.py  container.py
src/app/domain/repositories/users/: repository.py
src/app/domain/services/: base.py  container.py
src/app/domain/users/: __init__.py  container.py
src/app/domain/users/aggregates/: common.py  user_agg.py
src/app/domain/users/services/: auth_service.py  users_service.py
src/app/domain/users/value_objects/: users_vob.py
src/app/extensions/celery_ext/: celery_app.py
src/app/extensions/mq_ext/: mq_connectios.py  mq_ext.py  utils.py
src/app/extensions/mq_ext/clients/: kafka_client.py  rabbitmq_client.py
src/app/grpc/: client.py  server.py
src/app/grpc/pb/debug/: debug_pb2.py  debug_pb2_grpc.py
src/app/grpc/pb/example/: example_pb2_grpc.py
src/app/grpc/services/: debug_service.py  example_service.py
src/app/infrastructure/extensions/psql_ext/: psql_ext.py
src/app/infrastructure/extensions/redis_ext/: redis_ext.py
src/app/infrastructure/messaging/: mq_client.py
src/app/infrastructure/messaging/clients/: kafka_client.py  rabbitmq_client.py
src/app/infrastructure/models/: container.py  users.py
src/app/infrastructure/persistence/migrations/: env.py
src/app/infrastructure/repositories/: base.py  common_psql_repository.py  common_redis_repository.py  container.py  users_repository.py
src/app/infrastructure/tasks/: example_task.py
src/app/interfaces/api/: error_handlers.py  routers.py
src/app/interfaces/cli/: consume.py  gunicorn_config.py  main.py
src/app/interfaces/grpc/: client.py  server.py
src/migrations/: env.py
src/migrations/versions/: 62d1ffe3c8a5_users_with_password.py
tests/: conftest.py
tests/application/users/services/: test_common_service_is_healthy.py  test_users_service.py
tests/core/repositories/: test_repository_general.py
tests/domain/users/aggregates/: common.py
tests/fixtures/: constants.py  users.py
tests/infrastructure/messaging/: test_kafka_client.py  test_rabbit_mq_client.py
tests/infrastructure/repositories/: test_repository_general.py  test_users_repository.py
tests/intergation/repositories/: test_repository_general.py  test_users_repository.py
tests/intergation/services/: test_users_service.py
(+35 files in other folders)
