[tool.poetry]
name = "Poetry config"
version = "0.1.0"
description = ""
authors = ["Your Team <your@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "^0.115.6"
uvicorn = "0.34.0"
gunicorn = "^23.0.0"
environs = "^11.2.1"
alembic = "^1.13.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.3"
python-slugify = "^8.0.4"
furl = "^2.1.3"
slugify = "^0.0.1"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uuid = "^1.30"
email-validator = "^2.2.0"
python-dateutil = "2.9.0.post0"
aio-pika = "^9.5.4"
celery = "^5.4.0"
redis = "^5.2.1"
aiokafka = "^0.12.0"
pytz = "^2024.2"
pip = "^24.3.1"
grpcio = "^1.69.0"
grpcio-tools = "^1.69.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.0"
black = "^24.10.0"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autoapi = "^3.4.0"
sphinxcontrib-applehelp = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-p no:warnings --asyncio-mode=strict"
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.black]
line-length = 115
target-version = ['py311']


[tool.mypy]
exclude = ["pb"]
python_version=3.12
disallow_untyped_defs=1
ignore_missing_imports=1
