[tool.poetry]
name = "Poetry config"
version = "0.1.0"
description = ""
authors = ["Your Team <your@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "^0.116.1"
uvicorn = "0.35.0"
gunicorn = "^23.0.0"
environs = "^14.3.0"
alembic = "^1.16.4"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.3"
python-slugify = "^8.0.4"
furl = "^2.1.4"
slugify = "^0.0.1"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uuid = "^1.30"
email-validator = "^2.2.0"
python-dateutil = "2.9.0.post0"
aio-pika = "^9.5.7"
celery = "^5.5.3"
redis = "^6.4.0"
aiokafka = "^0.12.0"
pytz = "^2025.2"
grpcio = "^1.69.0"
grpcio-tools = "^1.69.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.0"
black = "^24.10.0"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autoapi = "^3.4.0"
sphinxcontrib-applehelp = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-p no:warnings --asyncio-mode=strict"
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.black]
line-length = 115
target-version = ['py311']

[tool.mypy]
python_version=3.12
disallow_untyped_defs=1
ignore_missing_imports=1
